# crc64_ecma182

./: README.md  crc64_ecma182.js  package-lock.json  package.json
build-for-cmake/: Makefile  config.gypi  crc64_ecma182.target.mk  crc64_ecma182_base.target.mk
build-for-cmake/Debug/: CMakeLists.txt
build-for-cmake/Release/: CMakeLists.txt  crc64_ecma182.node
build-for-cmake/Release/.deps/Release/: crc64_ecma182.node.d
build-for-cmake/Release/.deps/Release/obj.target/crc64_ecma182/src/: node_crc64_ecma_182.o.d
build-for-cmake/Release/.deps/Release/obj.target/crc64_ecma182_base/src/: crc64_ecma_182.o.d
src/: crc64_ecma_182.cc  crc64_ecma_182.h  node_crc64_ecma_182.cc
test/: buffer.js  file.js
